2004-09-13  Marek Safar  <marek.safar@seznam.cz>

	* class.cs (MethodCore.CheckBase): Fix bug #65757.

2004-09-12  Marek Safar  <marek.safar@seznam.cz>

	* attribute.cs (Attribute.Resolve): Add error 653 report.

	* class.cs (Class.ApplyAttributeBuilder): Add error 641
	report.
	(Method.ApplyAttributeBuilder): Add error 685 report.
	(Operator.Define): Add error 564 report.

	* cs-tokenizer.cs (handle_hex): Add error 1013 report.

	* expression.cs (Invocation.DoResolve): Add error
	245 and 250 report.

	* parameter.cs (Parameter.ApplyAttributeBuilder): Add
	error 674 report.

2004-09-11  Marek Safar  <marek.safar@seznam.cz>

	* class.cs (ConstructorInitializer.Resolve):
	Wrong error number (515->516).

2004-09-11  Marek Safar  <marek.safar@seznam.cz>

	* class.cs (Indexer.Define): Add error 631 report.

2004-09-11  Marek Safar  <marek.safar@seznam.cz>

	* ecore.cs (Error_NegativeArrayIndex): Fix 248 error.

2004-09-11  Marek Safar  <marek.safar@seznam.cz>

	* expression.cs (Probe.DoResolve): Add error CS0241 report.

2004-09-10  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay: Added error CS0241 report.

2004-09-10  Raja R Harinath  <rharinath@novell.com>

	* cs-parser.jay (fixed_statement): Introduce a scope for the
	declaration in the 'fixed' statement.

2004-09-09  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay: Added CS0230 error report.

2004-09-09  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay: Added errors CS0231 and CS0257 report.

2004-09-09  Marek Safar  <marek.safar@seznam.cz>

	* expression.cs (Argument.Resolve): Added error CS0192 and
	CS0199 report.

2004-09-09  Marek Safar  <marek.safar@seznam.cz>

	C# 2.0 #pragma warning feature

	* cs-tokenizer.cs (PreProcessPragma): New method; 
	Handles #pragma directive.

	* report.cs (WarningRegions): New class; Support
	class for #pragma warning directive. It tests whether
	warning is enabled for a given line.

2004-09-08  Miguel de Icaza  <miguel@ximian.com>
